--- a/kartotherian/static/public/index.html
+++ b/kartotherian/static/public/index.html
@@ -17,6 +17,7 @@
     <div id="map"></div>
     <div id="menu">
         <h3>Makina Maps Server</h3>
+        <p><a href="https://github.com/makinacorpus/makina-maps">on Github</a></p>
         <p>GL Styles</p>
         <div id="styles"></div>
         <p>Raster Tiles</p>
