Add map tooltips

--- a/tileserver-gl/static/public/index.html
+++ b/tileserver-gl/static/public/index.html
@@ -18,11 +18,20 @@
     <div id="menu">
         <h3>Makina Maps Server</h3>
         <p><a href="https://github.com/makina-maps/makina-maps">on Github</a></p>
-        <p>GL Styles</p>
+        <div
+            title="Mapbox GL Style JSON, style.json URL available.">
+            GL Styles 🛈
+        </div>
         <div id="styles"></div>
-        <p>Raster Tiles</p>
+        <div
+            title="Enabled vector to raster style. style.json, XYZ and WMS tiles available.">
+            Raster Tiles 🛈
+        </div>
         <div id="raster"></div>
-        <p>Vector Tiles</p>
+        <div
+            title="Tilejson descriptor available">
+            Vector Tiles 🛈
+        </div>
         <div id="vector"></div>
     </div>
 </body>
