Chart tileserver-gl homepage

--- a/tileserver-gl/static/public/index.html
+++ b/tileserver-gl/static/public/index.html
@@ -7,8 +7,6 @@
     <title>Makina maps</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <script src="bundle.js"></script>
-    <style>
-    </style>
 </head>
 
 <body>
@@ -16,22 +14,19 @@
     </style>
     <div id="map"></div>
     <div id="menu">
-        <h3>Makina Maps Server</h3>
-        <p><a href="https://github.com/makina-maps/makina-maps">on Github</a></p>
-        <div
-            title="Mapbox GL Style JSON, style.json URL available.">
+        <h3><img src="logo.png" widht="43" height="39" />Makina Maps</h3>
+        <p><a href="https://github.com/makina-maps/makina-maps">On Github</a></p>
+        <h4 title="Mapbox GL Style JSON, style.json URL available.">
             GL Styles 🛈
-        </div>
+        </h4>
         <div id="styles"></div>
-        <div
-            title="Enabled vector to raster style. style.json, XYZ and WMS tiles available.">
+        <h4 title="Enabled vector to raster style. style.json, XYZ and WMS tiles available.">
             Raster Tiles 🛈
-        </div>
+        </h4>
         <div id="raster"></div>
-        <div
-            title="Tilejson descriptor available">
+        <h4 title="Tilejson descriptor available">
             Vector Tiles 🛈
-        </div>
+        </h4>
         <div id="vector"></div>
     </div>
 </body>
