--- a/tileserver-gl/static/public/index.html
+++ b/tileserver-gl/static/public/index.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-        <meta charset="utf-8" />
-        <title>Makina maps</title>
-        <link rel="icon" type="image/png" href="favicon.png" />
-        <meta
-            name="viewport"
-            content="initial-scale=1,maximum-scale=1,user-scalable=no"
-        />
-    </head>
 
-    <body>
-        <div id="map"></div>
-        <div id="menu">
-            <h3><img src="logo.png" widht="43" height="39" />Makina Maps</h3>
-            <p>
-                <a href="https://github.com/makina-maps/makina-maps"
-                    >On Github</a
-                >
-            </p>
-            <h4 title="Mapbox GL Style JSON, style.json URL available.">
-                GL Styles 🛈
-            </h4>
-            <div id="styles"></div>
-            <h4
-                title="Enabled vector to raster style. style.json, XYZ and WMS tiles available."
-            >
-                Raster Tiles 🛈
-            </h4>
-            <div id="raster"></div>
-            <h4 title="Tilejson descriptor available">Vector Tiles 🛈</h4>
-            <div id="vector"></div>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta charset="utf-8" />
+    <title>Makina maps</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+</head>
+
+<body>
+    <div id="map"></div>
+    <div id="menu">
+        <h3>
+            <img src="logo.png" widht="37" height="40" alt="logo" />
+            <span>Makina Maps</span>
+        </h3>
+        <div id="subtitle">
+            <a href="https://github.com/makina-maps/makina-maps">
+                On Github
+            </a>
+            by
+            <a hre="https://makina-corpus.com/">
+                <img id="makina-corpus" src="makina-corpus.png" widht="50" height="54" src="makina-corpus.com" alt="Makina Corpus" />
+            </a>
         </div>
-        <div id="button-close" class="button">
-            <a href="#" class="circle">✖</a>
-        </div>
-        <div id="button-open" class="button" style="display: none">
-            <a href="#" class="circle">≡</a>
-        </div>
-        <script src="bundle.js"></script>
-    </body>
+        <h4 title="Mapbox GL Style JSON, style.json URL available.">
+            GL Styles 🛈
+        </h4>
+        <div id="styles"></div>
+        <h4 title="Enabled vector to raster style. style.json, XYZ and WMS tiles available.">
+            Raster Tiles 🛈
+        </h4>
+        <div id="raster"></div>
+        <h4 title="Tilejson descriptor available">Vector Tiles 🛈</h4>
+        <div id="vector"></div>
+    </div>
+    <div id="button-close" class="button">
+        <a href="#" class="circle">✖</a>
+    </div>
+    <div id="button-open" class="button" style="display: none">
+        <a href="#" class="circle">≡</a>
+    </div>
+    <script src="bundle.js"></script>
+</body>
+
 </html>
