Fix link in index.html to makina-corpus

--- a/tileserver-gl/static/public/index.html
+++ b/tileserver-gl/static/public/index.html
@@ -21,7 +21,7 @@
                 On Github
             </a>
             by
-            <a hre="https://makina-corpus.com/">
+            <a href="https://makina-corpus.com/">
                 <img id="makina-corpus" src="makina-corpus.png" widht="50" height="54" src="makina-corpus.com"
                     alt="Makina Corpus" />
             </a>
