--- a/tileserver-gl/static/public/index.html
+++ b/tileserver-gl/static/public/index.html
@@ -13,7 +13,7 @@
     <div id="map"></div>
     <div id="menu">
         <h3>
-            <img src="logo.png" widht="37" height="40" alt="logo" />
+            <img src="logo.png" width="37" height="40" alt="logo" />
             <span>Makina Maps</span>
         </h3>
         <div id="subtitle">
